[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = ""
authors = ["Steve Pike <steve@scpike.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-core = "2.11.1"
google-api-python-client = "2.94.0"
SQLAlchemy = "^1"
marshmallow-sqlalchemy = "0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
